--- a/taskheat/templates/base.html
+++ b/taskheat/templates/base.html
@@ -3,6 +3,11 @@
   <head>
     <link href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css" rel="stylesheet">
     <title>{{ page_name }}</title>
+    <style type="text/css">
+      body {
+        padding-top: 40px;
+      }
+    </style>
     {% block head %}
     {% endblock head %}
   </head>
@@ -20,7 +25,7 @@
 	      <li>Hello, {{ user.username }}</li>
 	    </ul>
 	    {% else %}
-            <form action="{% url 'django.contrib.auth.views.login' %}?login_url=/" method="POST">{% csrf_token %}
+            <form action="{% url 'django.contrib.auth.views.login' %}?next=/" method="POST">{% csrf_token %}
               <input id="id_username" class="input-small" type="text" name="username" placeholder="Username" maxlength="30">
               <input id="id_password" class="input-small" type="password" name="password" placeholder="Password">
               <button class="btn" type="submit">Sign in</button>
